--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
 *{
     box-sizing: border-box;
 }
@@ -243,59 +243,164 @@ header .container a{
 .contant-9 p{
     font-size: 14px;
 }
+
+
+/*Blog Page*/
+
+.blog-pg{
+    padding-top: 10em;
+    background: rgb(250,250,250);
+    background: linear-gradient(180deg, rgba(250,250,250,1) 0%, rgba(239,146,115,0.4962359943977591) 16%, rgba(254,249,248,0.28895308123249297) 96%);
+}
+.blog-pg h2{
+    font-family: 'EB Garamond', serif;
+    font-size: 5em;
+    padding-right: 5em;
+}
+.blog-pg h2 span{
+    font-style: italic;
+}
+.blog-pg p{
+    font-family: 'EB Garamond', serif;
+    font-size: 30px;
+    padding-right: 5em;
+}
+.btn-outline-black{
+	color: rgb(255, 255, 255) !important;
+	border: 10px solid!important ;
+    border-color: #000000 !important;
+    background-color: #000000 !important;
+    border-radius: 50px !important;
+}
+
+.btn-outline-black:hover{
+	font-weight: 500;
+	color: rgb(0, 0, 0) !important;
+    background-color: #ef9273 !important;
+    border-color: #ef9273 !important;
+}
+.blog-con1:hover{
+    transform: translateY(-10px);
+    transition: 0.5s ease;
+}
+.blog-con1{
+    transition: 0.5s ease;
+}
+.blog-con1 img{
+    border-radius: 30px;
+}
+.blog-con-text{
+    position: absolute;
+    bottom: 0;
+    color: white;
+    padding: 0px 25px;
+}
+.font{
+    font-family: 'EB Garamond', serif;
+}
+.blog-post-con{
+    position: relative;
+}
+.blog-post-con p{
+    padding-right: 2em;
+}
+.blog-post-t{
+    font-style: italic;
+    font-family: 'EB Garamond', serif;
+    color: #ef9273;
+}
+.blog-post-con img{
+    border-radius: 25px;
+    object-fit: cover;
+    cursor: pointer
+}
+.blog-post-cart a{
+    background-color: #efeef0;
+    padding: 5px 15px;
+    color: #000000;
+    border-radius: 4px;
+}
+.blog-post-cart a:hover{
+    color: #000000;
+    background-color: #e6e6ea;
+}
+.blog-post-p:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+.blog-post-aut{
+    position: relative;   
+    border-radius: 100%;
+
+}
+.blog-post-aut img{
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+    border-radius: 100%;
+    background-color: #ffffff33;
+    padding: 4px;
+    transition: 0.5s;
+}
+.blog-post-aut img:hover{
+    background-color: #ffffff;
+    padding: 6px;
+    transition: 0.5s;
+}
+.page-link{
+    color: #000000 !important;
+    
+}
+.page-link:hover{
+    color: white !important;
+    background-color: #ef9273 !important;
+}
 /*Footer*/
 footer .container{
     border-top: 1px solid #e3dada;
 }
-.footer-1{
-    border-bottom: 1px solid #e3dada;
-    position: relative;
+.footer-h1{
+    color: #ef9273;
+    font-family: 'EB Garamond', serif;
+    font-size: 5em;
+    font-style: italic;
 }
-.footer-1 h2{
-    line-height: 1.1;
-    font-size: 18px;
+.blog-social ul{
+    list-style: none;
+    padding-left: 0 !important;
+    font-size: 16px;
+    
 }
-.footer-1 h2::after{
-    content: "";
-    position: absolute;
-    left: 0;
-    top:51px;
-    width: 40%;
-    height: 2px;
-    background: #ef9273;
-    margin: 0 auto 0;
+small{
+    letter-spacing: 5px;
+    font-weight: 600 !important;
 }
-.contact-1{
-	border: none !important;
-	background-color: transparent !important;
-	border-bottom: 1px solid #e3dada !important;
-	border-radius: 0px !important;
-    margin-top: -17px;
+.blog-social i{
+    padding-right: 15px;
 }
-.form-group label{
-    font-size: 14px;
+.blog-social a{
+    color: #000000;
+    line-height: 2.3;
 }
-.contact-1:hover{
-    border-bottom: 1px solid #ef9273 !important;
+.blog-social a:hover{
+    color: #000000;
+    text-decoration:underline !important;
+}
+.blog-footer ul{
+    list-style: none;
+    padding-left: 0 !important;
+    font-size: 16px;
+}
+.blog-footer ul li a{
+    color: #000000;
+    line-height: 2.3;
+}
 
-}
-.contact-1:focus{
-	transition: 1s ease !important; 
-	box-shadow: none !important;
-	border-bottom: 1px solid #ef9273 !important;
-}
-.end{
-    border-top: 1px solid #e3dada;
-}
 .end p{
-    font-size: 14px;
+    font-size: 11px;
 }
-.end .col-lg-8 a{
+.end a{
     border-bottom: 1px dotted #969696;
 }
-.social-link a{
-    color: black !important;
-}
-.social-link a:hover{
-    color:#ef9273 !important;
-}
+
+
